--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.5.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.pulse.ai.</groupId>
+	<groupId>com.pulse.ai</groupId>
 	<artifactId>eureka</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>eureka</name>
