--- a/activity-service/src/main/resources/application.yml
+++ b/activity-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: PulseAI_ApplicationService
+    name: activity-service
 
   data:
     mongodb:
@@ -9,3 +9,7 @@ spring:
 
 server:
   port: 8082
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
