--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,1 +1,10 @@
-spring.application.name=eureka
+spring: 
+ application: 
+  name: eureka
+eureka:
+ client:
+  register-with-eureka: false
+  fetch-registry: false
+server: 
+  port: 8761
+
