--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: PulseAI
+    name: user-service
 
   datasource:
     url: jdbc:postgresql://localhost:5432/fitness-micro-user
@@ -14,3 +14,8 @@ spring:
 
 server: 
  port: 8081
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
