--- a/activity-service/src/main/resources/application.yml
+++ b/activity-service/src/main/resources/application.yml
@@ -2,6 +2,18 @@ spring:
   application:
     name: activity-service
 
+
+
+  kafka:
+   bootstrap-servers: localhost:9092
+   producer:
+    key-serializer: org.apache.kafka.common.serialization.StringSerializer
+    value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
+kafka:
+ topic:
+  name: activity-events
+  
   data:
     mongodb:
       uri: mongodb://localhost:27017/aiactivityfitness
@@ -13,3 +25,4 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
