--- a/activity-service/src/main/resources/application.yml
+++ b/activity-service/src/main/resources/application.yml
@@ -2,7 +2,10 @@ spring:
   application:
     name: activity-service
 
-
+  data:
+   mongodb:
+    uri: mongodb://localhost:27017/aiactivityfitness
+    database: aiactivityfitness
 
   kafka:
    bootstrap-servers: localhost:9092
@@ -14,14 +17,15 @@ kafka:
  topic:
   name: activity-events
   
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/aiactivityfitness
-      database: aiactivityfitness
+ 
 
 server:
   port: 8082
 eureka:
+  instance:
+   prefer-ip-address: true
+   hostname: localhost
+   instance-id: ${spring.application.name}:${server.port}
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
