--- a/ai-service/src/main/resources/application.yml
+++ b/ai-service/src/main/resources/application.yml
@@ -1,15 +1,32 @@
 spring:
   application:
     name: ai-service
+
+
   mongodb:
-     uri: mongodb://localhost:27017/airecommendationfitness
-     database: airecommendationfitness
+   uri: mongodb://localhost:27017/airecommendationfitness
+   database: airecommendationfitness
+
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: activity-processor-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.use.type.headers: false
+        spring.json.value.default.type: com.pulse.ai.service.fitness.models.Activity
+        spring.json.trusted.packages: com.pulse.ai.service.fitness.models
+
+kafka:
+  topic:
+    name: activity-events
 
 server:
   port: 8083
 
 eureka:
   client:
-   service-url:
-    defaultZone: http://localhost:8761/eureka/
-
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
