--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,10 +1,13 @@
-spring: 
- application: 
-  name: eureka
-eureka:
- client:
-  register-with-eureka: false
-  fetch-registry: false
-server: 
+spring:
+  application:
+    name: eureka
+
+server:
   port: 8761
 
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+  server:
+    enable-self-preservation: false
