--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -12,10 +12,14 @@ spring:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
-server: 
- port: 8081
+server:
+  port: 8081
 
 eureka:
-  client:
+ instance:
+  prefer-ip-address: true
+  hostname: localhost
+  instance-id: ${spring.application.name}:${server.port}
+ client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
