--- a/ai-service/src/main/resources/application.yml
+++ b/ai-service/src/main/resources/application.yml
@@ -30,3 +30,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
+gemini: 
+ api:
+  key: ${GEMINI_URL}
+  url: ${GEMINI_KEY}
