--- a/ai-service/src/main/resources/application.yml
+++ b/ai-service/src/main/resources/application.yml
@@ -27,11 +27,15 @@ server:
   port: 8083
 
 eureka:
+  instance:
+   prefer-ip-address: true
+   hostname: localhost
+   instance-id: ${spring.application.name}:${server.port}
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 
 gemini: 
  api:
-  key: ${GEMINI_URL}
-  url: ${GEMINI_KEY}
+  key: ${GEMINI_KEY}
+  url: ${GEMINI_URL}
